changed login button from html button type to form submit

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       <br>
       <input type="checkbox" checked="checked" id="remember"> remember me
       <br>
-      <button id="login-button">login</button>
+<!--      <button id="login-button">login</button>-->
+      <input type="submit" value="login" id="login-button">
     </form>
   </div>
 </main>
