--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <link rel = "stylesheet" href = "style.css">
-<script src = "login.js"></script>
+<script src = "login.js" defer></script>
 <head>
     <meta charset="UTF-8">
     <title>LOGIN</title>
