centered login window. updated login.js so page redirects on successful login. moved style.css into client folder

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel = "stylesheet" href = "style.css">
+<link rel = "stylesheet" href = "client/style.css">
 <script src = "login.js" defer></script>
 <head>
     <meta charset="UTF-8">
     <title>LOGIN</title>
 </head>
-<main>
+<main class="login">
   <div id="auth">
     <h1>LOGIN</h1>
     <div id="login-error-msg-holder">
