--- a/client/home.html
+++ b/client/home.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel = "stylesheet" href = "style.css">
+<script src = "login.js" defer></script>
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>SERVER CONTROLLER</title>
 </head>
-<body>
 
-</body>
+<nav>
+<h1>username</h1>
+</nav>
+
+<main>
+
+</main>
+
 </html>
