--- a/index.html
+++ b/index.html
@@ -6,9 +6,15 @@
     <meta charset="UTF-8">
     <title>LOGIN</title>
 </head>
+
+<nav>
+  <br>
+  <h1>login</h1>
+  <br>
+</nav>
+
 <main class="login">
   <div id="auth">
-    <h1>LOGIN</h1>
     <div id="login-error-msg-holder">
       <p id="login-error-msg">invalid username <span id="error-msg-second-line">and/or password</span></p>
     </div>
