running valheim server now works shorter wait for server kill added button disable while server is loading/shutting down

--- a/client/home.html
+++ b/client/home.html
@@ -20,28 +20,28 @@
             <img src="../img/minecraft.png" alt="minecraft">
             <p>minecraft</p>
             <p id="minecraft-status" class="status">pinging</p>
-            <button id="minecraft-button" onclick="updateStatuses('minecraft')">on/off</button>
+            <button id="minecraft-button">on/off</button>
         </div></li>
 
         <li><div id="terraria" class="games">
             <img src="../img/terraria.png" alt="terraria">
             <p>terraria</p>
             <p id="terraria-status" class="status">pinging</p>
-            <button id="terraria-button" onclick="updateStatuses('terraria')">on/off</button>
+            <button id="terraria-button">on/off</button>
         </div></li>
 
         <li><div id="valheim" class="games">
             <img src="../img/valheim.png" alt="valheim">
             <p>valheim</p>
             <p id="valheim-status" class="status">pinging</p>
-            <button id="valheim-button" onclick="updateStatuses('valheim')">on/off</button>
+            <button id="valheim-button">on/off</button>
         </div></li>
 
         <li><div id="pz" class="games">
             <img src="../img/pz.png" alt="pz">
             <p>project zomboid</p>
             <p id="pz-status" class="status">pinging</p>
-            <button id="pz-button" onclick="updateStatuses('pz')">on/off</button>
+            <button id="pz-button">on/off</button>
         </div></li>
     </ul>
 </main>
