--- a/client/home.html
+++ b/client/home.html
@@ -13,7 +13,7 @@
     <img src="../img/account.png" style="" alt="account">
 </nav>
 
-<main onload="serverInit()">
+<main>
     <pre id="console"></pre>
     <ul>
         <li><div id="minecraft" class="games">
