added working console to webpage fixed a bug where only user sending commands was receiving console

--- a/client/home.html
+++ b/client/home.html
@@ -15,7 +15,9 @@
 
 <main>
     <ul id="server-list">
-        <li><pre id="console"></pre></li>
+        <li><pre>
+            <code id="console"></code>
+        </pre></li>
     </ul>
 </main>
 
