--- a/client/home.html
+++ b/client/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel = "stylesheet" href = "style.css">
+<link rel = "stylesheet" href = "../styles/style.css">
 <script src = "client.js" defer></script>
 <head>
     <meta charset="UTF-8">
