--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel = "stylesheet" href = "client/style.css">
+<link rel = "stylesheet" href = "styles/style.css">
 <script src = "login.js" defer></script>
 <head>
     <meta charset="UTF-8">
