migrating to using next.js and typescript created a default login page using next.js; doesn't currently work with application added components from JoyUI

--- a/client/home.html
+++ b/client/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<link rel = "stylesheet" href = "style.css">
+<link rel = "stylesheet" href = "../styles/style.css">
 <script src = "client.js" defer></script>
 <head>
     <meta charset="UTF-8">
@@ -10,7 +10,7 @@
 <nav>
     <a href="../index.html" class="nav-link" id="log-out" onclick="localStorage.removeItem('isLoggedIn');">log out</a>
     <h1 id="user">username</h1>
-    <img src="../img/account.png" style="" alt="account">
+    <img src="../public/img/account.png" style="" alt="account">
 </nav>
 
 <main>
